Difficulty is now visible on screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <label for="number-input">Enter a number:</label>
         <input type="text" id="number-input" class="form-control">
         <button id="submit-button" class="btn btn-primary">Submit</button>
+        <p> Difficulty: <span id="difficulty"></span> </p>
       </div>
     </div>
     <script src="scripts/script.js"></script>
